syntax = "proto3";

package auth;

option go_package = "./services/blogsandposts_service/blog_service/pb";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message CreateBlogReq {
  string id = 1;
  string title = 2;
  string content = 3;
  string authorName = 4;
  string authorId = 5;
  bool published = 6;
  repeated string Tags = 7;
  Ownership ownership = 8;
  bool canEdit = 9;
  string folderPath = 10;
  google.protobuf.Timestamp createTime = 11;
  google.protobuf.Timestamp updateTime = 12;

  enum Ownership {
    THE_USER = 0;
    THE_MONKEYS = 1;
    THE_PARTNER = 2;
  }
  
}

message CreateBlogRes {
    string id = 1;
    string error = 2;
    string message = 3;
}

message GetArticleResp {
  string id = 1;
  string title = 2;
  string authorName = 3;
  string authorId = 4;
  string content = 5;
  google.protobuf.Timestamp createTime = 6;
}

service BlogsAndPostService {
    rpc CreateABlog(CreateBlogReq) returns (CreateBlogRes) {};
    rpc Get100Blogs(google.protobuf.Empty) returns (stream GetArticleResp) {};
}